--- a/_config.yml
+++ b/_config.yml
@@ -156,7 +156,7 @@ footer-hover-col: "#0085A1"
 #################################
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "G-M0568BT7RG"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 #google_analytics: ""
